--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: "Lato", sans-serif;
     margin: 0;
-    background-color: #f7f7f7;
+    background-color: #F7F7F7;
 }
 
 .header {
@@ -17,7 +17,7 @@ body {
 }
 
 .header-title {
-    color: #ffffff;
+    color: #FFFFFF;
     font-size: 48px;
     font-weight: bold;
     text-align: center;
@@ -25,7 +25,7 @@ body {
 }
 
 .header-description {
-    color: #cfcfcf;
+    color: #CFCFCF;
     margin: 4px auto;
     text-align: center;
     max-width: 384px;
@@ -52,7 +52,7 @@ body {
     justify-content: space-evenly;
     padding-top: 24px;
     margin: -80px auto 0 auto;
-    background-color: #ffffff;
+    background-color: #FFFFFF;
     box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.18);
 }
 
@@ -73,5 +73,5 @@ body {
 .menu-title {
     margin-bottom: 6px;
     font-weight: bold;
-    color: #079a82;
+    color: #079A82;
 }
